force-app/main/default/objects/infy_tracker__Team_Target__c/infy_tracker__Team_Target__c.object-meta.xml
<CustomObject>
    <label>Team Target</label>
    <nameField>
        <label>Team Target</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>