force-app/main/default/objects/infy_tracker__Team_Target__c/fields/infy_tracker__Quarter__c.field-meta.xml
<CustomField>
    <fullName>infy_tracker__Quarter__c</fullName>
    <label>Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>infy_tracker__Global_Quarter</valueSetName>
    </valueSet>
</CustomField>