force-app/main/default/objects/infy_tracker__Team_Target__c/fields/infy_tracker__Target__c.field-meta.xml
<CustomField>
    <fullName>infy_tracker__Target__c</fullName>
    <label>Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>