force-app/main/default/objects/infy_tracker__Team_Target__c/listViews/infy_tracker__All.listView-meta.xml
<ListView>
    <fullName>infy_tracker__All</fullName>
    <columns>NAME</columns>
    <columns>infy_tracker__Quarter__c</columns>
    <columns>infy_tracker__Team__c</columns>
    <columns>infy_tracker__Category__c</columns>
    <columns>infy_tracker__Target__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
</ListView>